--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@typescript-eslint/eslint-plugin": "^8.40.0",
     "@typescript-eslint/parser": "^8.40.0",
     "eslint": "^9.33.0",
+    "eslint-formatter-compact": "^8.40.0",
     "husky": "^9.1.7",
     "jest": "^30.0.5",
     "ts-jest": "^29.4.1",
